log
Thu May 12 12:02:28 HSP 2022: 
 tests:  0|5
total_score: 0/70
5a929c5
Thu May 12 12:16:34 HSP 2022: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:62:11: error: statement with no effect [-Werror=unused-value]
           for (newValue; newValue < 9; newValue++)
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
afdaca2
Thu May 12 12:17:06 HSP 2022: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
a5f9912
Thu May 12 12:17:52 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0026945
Thu May 12 19:34:23 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
839f10d
Thu May 12 19:36:15 HSP 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:65:17: error: the address of 'is_valid' will always evaluate as 'true' [-Werror=address]
             if (is_valid)
                 ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ad49126
